--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -1,31 +1,40 @@
 article {
-    background-color: rgba(255, 255, 255, 0.8);
-    position: relative; /* article을 상대적 위치로 설정합니다. */
+  background-color: rgba(255, 255, 255, 0.8);
+  position: relative;
+  /* article을 상대적 위치로 설정합니다. */
 }
 
 form {
-    padding-bottom: 0;
+  padding-bottom: 0;
 }
 
-  #more {
-    position: absolute; 
-    bottom: 2px; 
-    right: 2px; 
-    margin: 4px;
-  }
+#more {
+  position: absolute;
+  bottom: 2px;
+  right: 2px;
+  margin: 4px;
+}
 
 
-  .txt {
-    display: flex; /* Flexbox를 사용하여 내부 요소들을 행으로 정렬합니다. */
-    margin-top: 10px; /* 필요한 경우 위쪽 여백을 조정합니다. */
-  }
-  
-  #content {
-    box-sizing: border-box; /* 테두리와 패딩을 포함한 너비로 설정합니다. */
-  }
-  #id {
-    width: 130px;
-  }
-  .txt button {
-width:150px
-  }
+.txt {
+  display: flex;
+  /* Flexbox를 사용하여 내부 요소들을 행으로 정렬합니다. */
+  margin-top: 10px;
+  /* 필요한 경우 위쪽 여백을 조정합니다. */
+}
+
+#content {
+  box-sizing: border-box;
+  /* 테두리와 패딩을 포함한 너비로 설정합니다. */
+}
+
+#id {
+  width: 130px;
+}
+
+#boardbt {
+  width: 20%;
+  font-size: 12px;
+  padding: 5px 10px;
+}
+
