--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -1,133 +1,177 @@
+:root {
+  --gradientColor: linear-gradient(to right, hsl(187, 64%, 56%), hsl(199, 87%, 40%));
+
+  --PrimaryColor: hsl(199, 100%, 33%);
+
+}
+
 .home {
-    width: 100%;
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: auto;
+  width: 100%;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
 }
 
 .overlay {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    background: rgb(164, 205, 221);
-    mix-blend-mode: hard-light;
-    top: 0;
-    bottom: 0;
-    z-index: 1;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgb(164, 205, 221);
+  mix-blend-mode: hard-light;
+  top: 0;
+  bottom: 0;
+  z-index: 1;
 
 }
 
 
 video {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    bottom: 0;
-    object-fit: cover;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  bottom: 0;
+  object-fit: cover;
 }
 
 .background-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    z-index: -1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
 }
 
 video {
-    min-width: 100%;
-    min-height: 100%;
-    width: auto;
-    height: auto;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  min-width: 100%;
+  min-height: 100%;
+  width: auto;
+  height: auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .content {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
 
 .destinationInput {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .dateInput {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 
 article {
-    background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 .container {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
-#sosmap{
-    background-color: rgba(255, 255, 255, 0.8);
-    border-radius: 6px;
+#sosmap {
+  background-color: rgba(255, 255, 255, 0.8);
+  border-radius: 6px;
 }
 
-#modalOpenButton, #modalCloseButton {
-    cursor: pointer;
-  }
-  
-  #modalContainer {
-    width: 100%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.5);
-  }
-  
-  #modalContent {
-    position: absolute;
-    background-color: #ffffff;
-    width: 300px;
-    height: 150px;
-    padding: 15px;
-  }
-  
-  #modalContainer.hidden {
-    display: none;
+#modalOpenButton,
+#modalCloseButton {
+  cursor: pointer;
+}
+
+#modalContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 9999;
+
+
+}
+
+#modalContent {
+  background-color: #fff;
+  border-radius: 10px;
+  box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
+  /* 그림자 효과 추가 */
+  padding: 20px;
+  max-width: 80%;
+  max-height: 80%;
+  overflow: auto;
+  transition: 0.9s ease-in-out;
+  /* 부드러운 애니메이션 효과 추가 */
+
+  position: relative;
+}
+
+#modalContainer.hidden {
+  display: none;
+}
+
+#spbt {
+  padding: 6px;
+}
+
+#closebt {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+  border: 20px;
+  font-size: 30px;
+}
+
+.searchOption {
+  position: absolute;
+  background: var(--gradientColor);
+  width: max-content;
+  bottom: -.7rem;
+  column-gap: .8rem;
+  padding: 5px 1rem;
+  border-radius: 3rem;
+  left: 50%;
+  transform: translate(-50%);
+  justify-content: center;
+  cursor: pointer;
+
+  &:hover{
+    background: var(--PrimaryColor);
   }
 
-  #modalContainer {
-    z-index: 1000;
-    /* width: 100%;
-    height: 100%; */
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.5);
+  .icon{
+    font-size: 22px;
+    color: #fff;
   }
   
-  #modalContainer.hidden {
-    display: none;
-  }
+}
 
-  #modalContent {
-    position: absolute;
-    background-color: #ffffff;
-    /* width: 300px;
-    height: 150px;
-    padding: 15px; */
-  }
+#searchtxt{
+  font-size: 22px;
+  color: #fff;
+}
+
+
+.locicon {
+  font-size: 30px;
+}
+
+hgroup h2 {
+  margin-bottom: 20px;
+}
