--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -175,3 +175,22 @@ article {
 hgroup h2 {
   margin-bottom: 20px;
 }
+
+
+/* .cardDiv {
+  padding: 2rem 1rem;
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+} */
+
+/* @media screen and (min-width: 940px) {
+  .cardDiv {
+    grid-template-columns: repeat(2, 1fr);
+  }
+} */
+
+
+.cardBody {
+  padding: 10px;
+}
+
