--- a/src/Components/Login/login.css
+++ b/src/Components/Login/login.css
@@ -1,19 +1,23 @@
-.loginBody {
+.body {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 90vh;
+    height: 100vh;
     margin: 0;
   }
 
-.loginArticle {
+.article {
     /* margin: 50px; */
-    width: 500px;
+    width: 600px;
 }
 
 h1 {
     text-align: center;
     font-size: 40px;
     color: rgba(65, 84, 98); 
+}
+
+.error {
+    color: red;
 }
