--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,10 +1,10 @@
 .title li {
-    font-size: 40px; 
+    font-size: 70px; 
     font-weight: bold;
 }
 
 .icon {
-    font-size: 35px; 
+    font-size: 70px; 
 }
 
 #UserIcon {
@@ -14,4 +14,9 @@
 
 nav {
     margin: 40px;
+    margin-top: 60px;
 }
+
+/* #mydiv {
+    display: none;
+} */
