--- a/src/Components/Board/board.css
+++ b/src/Components/Board/board.css
@@ -1,22 +1,11 @@
 article {
   background-color: rgba(255, 255, 255, 0.8);
-  position: relative;
-}
+  /* position: relative; */
 
-.boardArticle{
   margin: 40px;
 }
 
-form {
-  padding-bottom: 0;
-}
 
-#more {
-  position: absolute;
-  bottom: 2px;
-  right: 2px;
-  margin: 4px;
-}
 
 
 .txt {
@@ -42,4 +31,20 @@ form {
 
 .write-body {
   margin: 50px;
+}
+
+.detailMain {
+  display: flex;
+  flex-direction: column;
+}
+.detailh1 {
+  font-size: 50px;
+  text-align: start;
+  margin-left: 50px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+
+.detailicon {
+  font-size: 50px;
 }
