--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: auto;
+  margin: 50px;
 }
 
 .overlay {
@@ -174,21 +174,20 @@ hgroup h2 {
   margin-bottom: 20px;
 }
 
-
-/* .cardDiv {
-  padding: 2rem 1rem;
-  display: grid;
-  grid-template-columns: repeat(1, 1fr);
-} */
-
-/* @media screen and (min-width: 940px) {
-  .cardDiv {
-    grid-template-columns: repeat(2, 1fr);
-  }
-} */
+.homeMain {
+  margin: 50px;
+  padding: 50px;
+}
 
 
 .cardBody {
   padding: 10px;
 }
 
+/* .cardArticle {
+  height: 45vh;
+} */
+
+.mainInput {
+  margin-bottom: 50px;
+}
