--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -1,10 +1,10 @@
 .title li {
-  font-size: 70px;
+  font-size: 55px;
   font-weight: bold;
 }
 
 .icon {
-  font-size: 70px;
+  font-size: 55px;
 }
 
 .UserIcon {
@@ -27,7 +27,7 @@
   justify-content: space-between;
   align-items: center;
   margin: 30px;
-  width: 100%;
+  /* width: 100%; */
 
   height: 75vh;
 }
